src/tests/functionality/assignment_3_io_arrays_comments/invalid_syntax/03_mandatory_array_initializer_missing_closing_brace.c
int main() {
    int values[3] = {1, 2, 3;
    return 0;
}
